# TennisMatchScoreboard

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
tennis_match_scoreboard/: apps.py  forms.py  models.py  urls.py  views.py
tennis_match_scoreboard/dtos/: ScoreDto.py
tennis_match_scoreboard/migrations/: 0001_initial.py
tennis_match_scoreboard/services/: __init__.py  new_match_service.py
tennis_match_scoreboard/templates/tennis_match_scoreboard/: index.html  match-score.html  matches.html  new-match.html
tennis_match_scoreboard/views/: __init__.py  main_page_view.py  match_score_page_view.py  matches_page_view.py  new_match_page_view.py
