[project]
name = "tennismatchscoreboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.15",
    "mysqlclient>=2.2.8",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.43",
]
